--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 before_install:
   - pip install pycodestyle codecov
-  - python3 setup.py install
+  - pip install -r requirements.txt
 script:
   - pycodestyle --exclude=venv --ignore=E501 .
   - pytest
