--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ script:
   - pycodestyle --exclude=venv --ignore=E501 .
   - python3 -m unittest
   - coverage run --parallel-mode --branch --source=. -m unittest discover -bv
+  - mkdir _site
+  - coverage run --parallel-mode --branch --source=. -m unittest discover -bv
   - cp add_parser.py.sample add_parser.py
   - coverage run --parallel-mode --branch --source=. -m unittest discover -bv
   - coverage combine
