--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ before_install:
   - pip install -r requirements.txt
 script:
   - pycodestyle --exclude=venv --ignore=E501 .
-  - coverage run --parallel-mode --branch --source=. -m pytest
+  - coverage run --parallel-mode --branch --source=. -m unittest discover -bv
   - cp add_parser.py.sample add_parser.py
-  - coverage run --parallel-mode --branch --source=. -m pytest
+  - coverage run --parallel-mode --branch --source=. -m unittest discover -bv
   - coverage combine
   - coverage report -m
 after_success:
